# devc_motion_controller

./: Makefile  README.md
application/: FreeRTOSConfig.h  main_control.c  main_control.dev  main_ctrl.c  main_ctrl.dev
board/: README.md
board/stm32-nucleo-f429zi/: README.md
common/: commander.c  fuzzy.c  ga.c  motion_control.c  motor_control.c  navigator.c  nn.c  pid.c  system.c  system.h
common/small-matrix-inverse/: invert4x4_c.h
common/test/: test.c  test.dev
lib/: Graphics in Dev C++.7z
lib/bgim/include/: graphics.h
lib/bgim/src/: libbgi.dev  text.cxx  winbgi.cxx
lib/navi_lib/guide_sensor/: common_cfg.h
lib/navi_lib/guide_sensor/digital_16/: digital_16.c  digital_16.h
middleware/motion/: README.md
middleware/motion_helper/: README.md
middleware/motion_helper/src/: motion_helper.cpp
middleware/motion_node/: README.md
middleware/motion_ros/: CMakeLists.txt  package.xml
middleware/motion_ros/src/: motion_ros.cpp
middleware/ros/src/motion/: CMakeLists.txt  motion.cpp  package.xml
middleware/ros/src/motion_msgs/: CMakeLists.txt  README.md  package.xml
middleware/ros/src/motion_msgs/msg/: Data.msg  Mot.msg  Pid.msg  Vel.msg
middleware/ros/src/motion_tester/: CMakeLists.txt  README.md  motion_tester.cpp  package.xml
module/FreeRTOS/Source/portable/MSVC-MingW/: port.c
navi_lib/guide_sensor/: common_cfg.h
navi_lib/guide_sensor/digital_16/: digital_16.c  digital_16.h
platform/: platform.h
platform/general_2wd/: README.md  motor_driver.c  spec.h
platform/general_4wd/: README.md  helper.c
platform/nexus10011/: README.md  motor_driver.c  nexus10011_spec.h  spec.h
platform/omr10/: README.md  helper.c  motor_driver.c  motor_driver_ros.c  omr10_spec.h  spec.h
simulator/: banner.txt  simulator.c  simulator.cpp  simulator.dev
simulator/log/: 20160706215323.csv  20160706231011.csv  log.csv  log.txt  log_plot.m
simulator/qt/simulator/: main.cpp  simulator.cpp  simulator.h  simulator.pro  simulator.ui
