<package>
  <name>motion_msgs</name>
  <version>0.1.0</version>
  <description>
    <p>
      motion message and service types: custom messages and services for motion.
    </p>
  </description>
  <author email="tsao.ricardo@iac.com.tw">Ricardo</author>
  <maintainer email="tsao.ricardo@iac.com.tw">Ricardo</maintainer>
  <license>BSD</license>
  <url type="website">http://10.2.225.40/smart-machine/devc_motion_controller</url>
  <url type="repository">http://10.2.225.40/smart-machine/devc_motion_controller/wikis</url>
  <url type="bugtracker">http://10.2.225.40/smart-machine/devc_motion_controller/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>